style.css
body {
    margin: 0;
    font-family: sans-serif;
    background-color: yellow;
}

a {
    text-decoration: none;
    color: whitesmoke;
}

.container {
    text-align: center;
    padding: 100px 0 30px 0;
}

.calculator {
    display: flex;
    flex-direction: column;
    background-color: gainsboro;
    border: 1.5px solid black;
    border-radius: 10px;
    width: 350px;
    height: 490px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
    padding: 20px;
}

.display {
    width: 90%;
    height: 20%;
    background-color: beige;
    margin-left: auto;
    margin-right: auto;
    padding: 9px;
    text-align: right;
}

.buttons-grid {
    display: grid;
    padding: 40px 15px;
    gap: 5px;
    grid-template-columns: repeat(4, 1fr);
}

.clr,.delete,.btn,.opp,#execute  {
    border-radius: 5px;
    border: 1.5px solid black;
}

.btn,.opp,#execute {
    background-color: aquamarine;
    padding: 8px;
    font-size: 25px;
}

.clr,.delete {
    font-size: 20px;
    padding: 10px;
    grid-column: span 2;
}

.delete {
    background-color: cornflowerblue;
}

.clr {
    background-color: brown;
    color: whitesmoke;
}

footer {
    text-align: center;
    padding: 15px;
    background-color: green;
    font-size: 20px;
}

#lastOperation {
    font-size: 18px;
    height: 40%;
}

#currentOperation {
    font-size: 35px;
    height: 60%;
}

